deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: teto
  labels:
    app.kubernetes.io/part-of: teto
    projeto: localizacao-teto
